# Signed-Distance-Fields

./: Cargo.toml  README.md  bacon.toml
.github/workflows/: rust.yml
examples/: operators_boolean.rs  operators_transform.rs  primitives.rs
src/: lib.rs  main.rs
src/objects/: .primitives.rs.rustfmt  mod.rs  operators.rs  primitives.rs
src/render/: mod.rs
