[package]
name = "signed_distance_fields"
version = "1.0.2"
edition = "2021"
authors = ["Malte Aschenbach <malteaschenbach@gmail.com"]
repository = "https://github.com/MAA28/Signed-Distance-Fields"
description = "A implementation of SDFs (signed distance fields) and some operators to play with these SDFs"
license = "MIT"


[dependencies]
math_vector = "0.2.1"
itertools-num = "0.1.3"
image = "0.24.4"
palette = "0.6.1"
